<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/preview"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textAppearance="@style/title2"
            android:fontFamily="@font/sf_pro_text_bold"
            android:textColor="@color/greenApple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_img"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_regular"
            app:layout_constraintStart_toStartOf="@+id/item_title"
            app:layout_constraintEnd_toEndOf="@id/item_title"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            tools:text="@string/created_date" />

        <TextView
            android:id="@+id/item_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sf_pro_text_regular"
            app:layout_constraintStart_toStartOf="@+id/item_title"
            app:layout_constraintEnd_toEndOf="@id/item_title"
            app:layout_constraintTop_toBottomOf="@+id/item_date"
            tools:text="@string/percent" />

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text2"
            android:fontFamily="@font/sf_pro_text_regular"
            android:maxLines="3"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/item_title"
            app:layout_constraintEnd_toEndOf="@id/item_title"
            app:layout_constraintTop_toBottomOf="@+id/item_percent"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>