<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.user.UserFragment">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAppearance="@style/title2"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_display_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="27dp"/>

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/backdrop_base"
        app:srcCompat="@drawable/user_photo"
        android:scaleType="centerCrop"/>

    <View
        android:id="@+id/backdrop_base"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/backdrop_base_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="246dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/title_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="52dp"
        android:text="@string/e_mail"
        android:layout_alignParentTop="true"
        android:textAppearance="@style/title2"
        android:fontFamily="@font/sf_pro_text_bold"
        app:layout_constraintTop_toTopOf="@id/backdrop_base"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/icon_email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/title_email"
        app:layout_constraintStart_toStartOf="@id/title_email"
        app:srcCompat="@drawable/email"/>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:text="@string/e_mail"
        android:fontFamily="@font/sf_pro_text_regular"
        android:textAppearance="@style/text"
        app:layout_constraintStart_toEndOf="@id/icon_email"
        app:layout_constraintTop_toTopOf="@id/icon_email"/>

    <TextView
        android:id="@+id/title_pass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="33dp"
        android:text="@string/password"
        android:layout_alignParentTop="true"
        android:textAppearance="@style/title2"
        android:fontFamily="@font/sf_pro_text_bold"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        app:layout_constraintStart_toStartOf="@id/title_email"/>

    <ImageView
        android:id="@+id/icon_pass"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/title_pass"
        app:layout_constraintStart_toStartOf="@id/title_pass"
        app:srcCompat="@drawable/password"/>

    <TextView
        android:id="@+id/change_pass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="42dp"
        android:text="@string/change"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:textAppearance="@style/text"
        android:textColor="@color/greenApple_500"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/user_email"
        app:layout_constraintTop_toTopOf="@id/icon_pass"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:backgroundTint="@color/borderColorError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>