<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_begin_scene"
    tools:context=".ui.begin.BeginActivity">

    <View
        android:id="@+id/backdrop_base"
        android:layout_width="430dp"
        android:layout_height="606dp"
        android:background="@drawable/backdrop_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/logo"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/base_logo"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backdrop_base">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@drawable/logo"
            app:tint="@color/greenApple_700" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:text="@string/app_desc"
        android:textAppearance="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="21dp"
        android:padding="16dp"
        android:text="@string/register"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_button" />

    <TextView
        android:id="@+id/log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="32dp"
        android:text="@string/login"
        android:textAppearance="@style/button"
        android:textColor="#9586A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_button" />

</androidx.constraintlayout.widget.ConstraintLayout>